--- a/src/main/resources/templates/landing_page.html
+++ b/src/main/resources/templates/landing_page.html
@@ -638,15 +638,9 @@
                             <ion-icon name="menu-outline"></ion-icon>
                         </div>
 
-                        <div class="search">
-                            <label>
-                                <input type="text" placeholder="Search here">
-                                <ion-icon name="search-outline"></ion-icon>
-                            </label>
-                        </div>
 
                         <div class="user">
-                            <img src="https://foxnews.fpt.vn/wp-content/uploads/2022/09/kk-jpeg-8614-1662375872.jpg" alt="">
+                            <img src="https://static.vecteezy.com/system/resources/thumbnails/009/734/564/small/default-avatar-profile-icon-of-social-media-user-vector.jpg" alt="">
                         </div>
                     </div>
 
@@ -790,7 +784,7 @@
                             <table>
                                 <tr>
                                     <td width="60px">
-                                        <div class="imgBx"><img src="assets/imgs/customer02.jpg" alt=""></div>
+                                        <div class="imgBx"><img src="https://static.vecteezy.com/system/resources/thumbnails/009/734/564/small/default-avatar-profile-icon-of-social-media-user-vector.jpg" alt=""></div>
                                     </td>
                                     <td>
                                         <h4>MinhTruong <br> <span>Minhthse171011@fpt.edu.vn</span></h4>
@@ -799,7 +793,7 @@
 
                                 <tr>
                                     <td width="60px">
-                                        <div class="imgBx"><img src="assets/imgs/customer01.jpg" alt=""></div>
+                                        <div class="imgBx"><img src="https://static.vecteezy.com/system/resources/thumbnails/009/734/564/small/default-avatar-profile-icon-of-social-media-user-vector.jpg" alt=""></div>
                                     </td>
                                     <td>
                                         <h4>HengWetason <br> <span>hehwewse172031@fpt.edu.vn</span></h4>
@@ -808,7 +802,7 @@
 
                                 <tr>
                                     <td width="60px">
-                                        <div class="imgBx"><img src="assets/imgs/customer02.jpg" alt=""></div>
+                                        <div class="imgBx"><img src="https://static.vecteezy.com/system/resources/thumbnails/009/734/564/small/default-avatar-profile-icon-of-social-media-user-vector.jpg" alt=""></div>
                                     </td>
                                     <td>
                                         <h4>Minh(Lecturer) <br> <span>truonghaiminh2112@gmail.com</span></h4>
@@ -817,7 +811,7 @@
 
                                 <tr>
                                     <td width="60px">
-                                        <div class="imgBx"><img src="assets/imgs/customer01.jpg" alt=""></div>
+                                        <div class="imgBx"><img src="https://static.vecteezy.com/system/resources/thumbnails/009/734/564/small/default-avatar-profile-icon-of-social-media-user-vector.jpg" alt=""></div>
                                     </td>
                                     <td>
                                         <h4>Khoi<br> <span>khoitrse163019@fpt.edu.vn</span></h4>
@@ -826,7 +820,7 @@
 
                                 <tr>
                                     <td width="60px">
-                                        <div class="imgBx"><img src="assets/imgs/customer02.jpg" alt=""></div>
+                                        <div class="imgBx"><img src="https://static.vecteezy.com/system/resources/thumbnails/009/734/564/small/default-avatar-profile-icon-of-social-media-user-vector.jpg" alt=""></div>
                                     </td>
                                     <td>
                                         <h4>KhanhThinh <br> <span>khanhthse157801@fpt.edu.vn</span></h4>
@@ -835,7 +829,7 @@
 
                                 <tr>
                                     <td width="60px">
-                                        <div class="imgBx"><img src="assets/imgs/customer01.jpg" alt=""></div>
+                                        <div class="imgBx"><img src="https://static.vecteezy.com/system/resources/thumbnails/009/734/564/small/default-avatar-profile-icon-of-social-media-user-vector.jpg" alt=""></div>
                                     </td>
                                     <td>
                                         <h4>KhaiNguyen <br> <span>Khaingse172012@fpt.edu.vn</span></h4>
@@ -844,7 +838,7 @@
 
                                 <tr>
                                     <td width="60px">
-                                        <div class="imgBx"><img src="assets/imgs/customer01.jpg" alt=""></div>
+                                        <div class="imgBx"><img src="https://static.vecteezy.com/system/resources/thumbnails/009/734/564/small/default-avatar-profile-icon-of-social-media-user-vector.jpg" alt=""></div>
                                     </td>
                                     <td>
                                         <h4>DucPhuc <br> <span>Ducphse173012@fpt.edu.vn</span></h4>
@@ -853,7 +847,7 @@
 
                                 <tr>
                                     <td width="60px">
-                                        <div class="imgBx"><img src="assets/imgs/customer02.jpg" alt=""></div>
+                                        <div class="imgBx"><img src="https://static.vecteezy.com/system/resources/thumbnails/009/734/564/small/default-avatar-profile-icon-of-social-media-user-vector.jpg" alt=""></div>
                                     </td>
                                     <td>
                                         <h4>AnNguyen <br> <span>Anngse161023@fpt.edu.vn</span></h4>
