--- a/src/main/resources/templates/landing_profile.html
+++ b/src/main/resources/templates/landing_profile.html
@@ -736,15 +736,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             <ion-icon name="menu-outline"></ion-icon>
                         </div>
 
-                        <div class="search">
-                            <label>
-                                <input type="text" placeholder="Search here">
-                                <ion-icon name="search-outline"></ion-icon>
-                            </label>
-                        </div>
 
                         <div class="user">
-                            <img src="https://foxnews.fpt.vn/wp-content/uploads/2022/09/kk-jpeg-8614-1662375872.jpg" alt="">
+                            <img src="https://static.vecteezy.com/system/resources/thumbnails/009/734/564/small/default-avatar-profile-icon-of-social-media-user-vector.jpg" alt="">
                         </div>
                     </div>
 
@@ -761,27 +755,27 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <div class="chartsBx">
                         <div class="chart11">  
                             <div class="user1">
-                                <img src="https://foxnews.fpt.vn/wp-content/uploads/2022/09/kk-jpeg-8614-1662375872.jpg" alt="">
+                                <img src="https://static.vecteezy.com/system/resources/thumbnails/009/734/564/small/default-avatar-profile-icon-of-social-media-user-vector.jpg" alt="">
                             </div>
-                            <h2 class="Avatar">Avatar Admin</h2>
+                            <h2 class="Avatar">Avatar <span th:text="${user.userName}">text</span></h2>
                         </div>
                         <div class="chart">  
-                            <form th:action="@{/profileAdmin}" th:object="${logoutForm}" method="POST" class="ge">
+                            <form action="profileAdmin" method="POST" class="ge">
 
-                                Full Name<input type="text" id="FullName" name="FullName" th:value="${user.userName}" required="" class="gege"/>
+                                Full Name<input type="text" id="FullName" name="FullName" th:value="${user.userName}" required="" class="gege" readonly=""/>
 
                                 </br> Role ID<input type="text" id="roleID" name="roleID" th:value="${user.roleId}" readonly="" class="gege"/>
 
-                                </br> User ID<input type="text" id="userID" name="userID" th:value="${user.userID}" required="" class="gege"/>
+                                </br> User ID<input type="text" id="userID" name="userID" th:value="${user.userID}" required="" class="gege" readonly=""/>
 
-                                </br> Password<input type="text" id="PassWord" name="PassWord" th:value="${user.password}" required="" class="gege"/>
+                                </br> Password<input type="text" id="PassWord" name="PassWord" th:value="${user.password}" required="" class="gege" readonly=""/>
 
-                                </br> BirthDate<input type="date" class="gege" placeholder="" id="birthdate" name="birthdate" th:value="${user.birthdate}">
+                                </br> BirthDate<input type="date" class="gege" placeholder="" id="birthdate" name="birthdate" th:value="${user.birthdate}" readonly="">
 
-                                </br> Description<textarea id="description" name="description" class="gege" th:text="${user.description}"></textarea>
+                                </br> Description<textarea id="description" name="description" class="gege" th:text="${user.description}" readonly=""></textarea>
 
-                                </br> <input type="submit" name="action" Value="Save Change" class="he"/>
-                                <input type="reset" value="Reset Change"/>
+<!--                                </br> <input type="submit" name="action" Value="Save Change" class="he"/>
+                                <input type="reset" value="Reset Change"/>-->
                             </form>
                         </div>
                     </div>
