--- a/src/main/resources/templates/landing_system.html
+++ b/src/main/resources/templates/landing_system.html
@@ -641,15 +641,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             <ion-icon name="menu-outline"></ion-icon>
                         </div>
 
-                        <div class="search">
-                            <label>
-                                <input type="text" placeholder="Search here">
-                                <ion-icon name="search-outline"></ion-icon>
-                            </label>
-                        </div>
+
 
                         <div class="user">
-                            <img src="https://foxnews.fpt.vn/wp-content/uploads/2022/09/kk-jpeg-8614-1662375872.jpg" alt="">
+                            <img src="https://static.vecteezy.com/system/resources/thumbnails/009/734/564/small/default-avatar-profile-icon-of-social-media-user-vector.jpg" alt="">
                         </div>
                     </div>
 
@@ -660,7 +655,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                         </div>
                     </div>
                     <!-- ================ Order Details List ================= -->
-                    <div class="details">
+<!--                    <div class="details">
                         <div class="recentOrders">
                             <div class="cardHeader">
                                 <h2>List of Subjects</h2>
@@ -727,7 +722,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                 </tbody>
                             </table>
                         </div>
-                    </div>
+                    </div>-->
 
 
                     <div class="details">
@@ -782,7 +777,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     </div>
 
 
-                    <div class="details">
+<!--                    <div class="details">
                         <div class="recentOrders">
                             <div class="cardHeader">
                                 <h2>List of Tags</h2>
@@ -819,7 +814,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                 </tbody>
                             </table>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
 
