--- a/src/main/resources/templates/aboutus.html
+++ b/src/main/resources/templates/aboutus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>FPT Academic Blog Homepage</title>
+        <title>About Us Page</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
@@ -779,8 +779,8 @@
                 width:100%;
 
             }
-            
-             .buttonOwn {
+
+            .buttonOwn {
                 display: inline-block;
                 padding: 10px 20px;
                 font-size: 16px;
@@ -814,6 +814,60 @@
             /* Hover effect */
             .buttonOwn:hover {
                 transform: scale(1.1);
+            }
+                        .dropdown {
+                position: relative;
+            }
+
+            .dropdown-btn {
+                background-color: #4CAF50;
+                color: white;
+                padding: 10px;
+                border: none;
+                cursor: pointer;
+                transition: background-color 0.3s;
+                width:90%;
+                margin-top:10px;
+                border-radius: 10px;
+            }
+
+            .dropdown-btn:hover {
+                background-color: #388E3C; /* Darker green on hover */
+            }
+
+            .dropdown-content {
+                position: absolute;
+                top: 110%;
+                left:0;
+                z-index: 1;
+                display: none;
+                min-width: 270px;
+                padding: 10px;
+                background-color: #f2f2f2;
+                animation: slide-up 0.5s ease-in-out;
+            }
+
+            .dropdown-content a {
+                display: block;
+                padding: 0px 0;
+                font-size: 16px;
+                text-decoration: none;
+                color: black;
+            }
+
+            .dropdown.show .dropdown-content {
+                display: block;
+            }
+
+            @keyframes slide-up {
+                0% {
+                    opacity: 0;
+                    transform: translateY(-10px);
+                }
+                100% {
+                    opacity: 1;
+                    transform: translateY(0);
+                }
             }
         </style>
     </head>
@@ -922,9 +976,6 @@
                                 <!--                                <li onclick="changeBackgroundColor(this)">&#127968; Home</li>
                                                                 <li onclick="changeBackgroundColor(this)">&#127916; Videos</li>-->
                                 <li onclick="changeBackgroundColor(this)">&#127968; <a href="viewforum">Home</a></li>
-                                <li onclick="changeBackgroundColor(this)">&#128206; Tags</li>
-                                <li onclick="changeBackgroundColor(this)">&#128172; Subjects</li>
-                                <li onclick="changeBackgroundColor(this)">&#128140; Categories</li>
                                 <li onclick="changeBackgroundColor(this)">&#128219; <a href="about">About</a></li>
                                 <li onclick="changeBackgroundColor(this)">&#128222; <a href="contact">Contact</a></li>
                                 <!--                                <li onclick="changeBackgroundColor(this)">&#129300; Software comparisons</li>
@@ -967,9 +1018,6 @@
                         <!--                        <li onclick="changeBackgroundColor(this)">&#127968; Home</li>-->
                         <!--                        <li onclick="changeBackgroundColor(this)">&#127916; Videos</li>-->
                         <li onclick="changeBackgroundColor(this)">&#127968; <a th:href="@{/viewforum}">Home</a></li>
-                        <li onclick="changeBackgroundColor(this)">&#128206; Tags</li>
-                        <li onclick="changeBackgroundColor(this)">&#128172; Subjects</li>
-                        <li onclick="changeBackgroundColor(this)">&#128140; Categories</li>
                         <li onclick="changeBackgroundColor(this)">&#128219; <a href="about">About</a></li>
                         <li onclick="changeBackgroundColor(this)">&#128222; <a href="contact">Contact</a></li>
                         <!--                        <li onclick="changeBackgroundColor(this)">&#129300; Software comparisons</li>-->
@@ -977,6 +1025,21 @@
                         <li onclick="changeBackgroundColor(this)">&#128100; <a th:href="@{/viewauthor}">View Profile</a></li>
                         <li onclick="changeBackgroundColor(this)">&#128682; <a th:href="@{/logout}">Logout</a></li>
                     </ul>
+
+                    <div class="dropdown">
+                        <button class="dropdown-btn" onclick="toggleDropdown()">Categories</button>
+                        <div id="dropdownContent" class="dropdown-content">
+                            <ul th:each="category : ${category}"> 
+                                <li onclick="changeBackgroundColor(this)"><a th:href="@{/detailcategory/{id}(id=${category.categoryId})}" th:text="${#strings.abbreviate(category.categoryName,28)}">Chicken</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <script>
+                        function toggleDropdown() {
+                            var dropdown = document.querySelector(".dropdown");
+                            dropdown.classList.toggle("show");
+                        }
+                    </script>
                 </div>
 
                 <!-- Phần 4 -->
