--- a/src/main/resources/templates/aprovalblog.html
+++ b/src/main/resources/templates/aprovalblog.html
@@ -213,6 +213,7 @@
                 padding-right: 80px;
                 margin-top: -160px; /* Khoảng cách 20px từ container */
                 margin-bottom:20px;
+                min-height: 600px;
             }
 
             .section3
@@ -707,15 +708,46 @@
             }
 
             .dropdown-content {
-                position: absolute;
+                /*                position: absolute;*/
                 top: 110%;
                 left:0;
                 z-index: 1;
+                height: 220px;
+                overflow-y: auto;
+                overflow-x: hidden;
                 display: none;
                 min-width: 270px;
                 padding: 10px;
                 background-color: #f2f2f2;
                 animation: slide-up 0.5s ease-in-out;
+            }
+
+            /* Custom scrollbar styles */
+            .dropdown-content::-webkit-scrollbar {
+                width: 10px;
+            }
+
+            .dropdown-content::-webkit-scrollbar-track {
+                background-color: #e0e0e0;
+                border:2px solid white;
+                border-radius: 8px;
+            }
+
+            .dropdown-content::-webkit-scrollbar-thumb {
+                background-color: #888;
+                border-radius: 8px;
+            }
+
+            .dropdown-content::-webkit-scrollbar-thumb:hover {
+                background-color: #555;
+            }
+
+            .dropdown-content::-webkit-scrollbar-thumb:active {
+                background-color: #333;
+            }
+
+            .dropdown-content::-webkit-scrollbar-corner {
+                background-color: #f5f5f5;
             }
 
             .dropdown-content a {
@@ -861,19 +893,19 @@
                                 <th>Content</th> 
                                 <th>Detail</th>
                                 <th>
-                                    Approved - Rejected
+                                    Approve - Reject
                                 </th>
                             </tr> 
                         </thead> 
                         <tbody>
                             <tr th:each="post : ${post}" th:if="${post.author.contains('@fpt.edu.vn') && post.status == 0}"> 
                                 <td th:text="${post.author}">minhthse171011@fpt.edu.vn</td> 
-                                <td th:text="${post.title}">testing add category function</td> 
+                                <td th:text="${#strings.abbreviate(post.title,15)} ">testing add category function</td>
                                 <td th:each="category : ${category}" th:if="${category.categoryId eq post.categoryId}" style="width: 100px;">
                                     <span style="background-color: #3498db; color: white;  font-weight: bold;padding:6px;
-                                                        border-radius: 4px; font-size: 13px;margin-left: 5px"  th:text="${#strings.abbreviate(category.categoryName,11)} ">Campus Life</span>
+                                          border-radius: 4px; font-size: 13px;margin-left: 5px"  th:text="${#strings.abbreviate(category.categoryName,11)} ">Campus Life</span>
                                 </td>
-                                <td th:utext="${#strings.abbreviate(post.postContent,90)} ">testing add category function</td> 
+                                <td th:utext="${#strings.abbreviate(post.postContent,20)} ">testing add category function</td> 
                                 <td>
                                     <a th:href="@{/details/{id}(id=${post.postId})}">Show More</a>
                                 </td>
@@ -885,7 +917,7 @@
                                         </form> 
                                         <form action="denied" method="post" id="deniedForm"> 
                                             <input type="hidden" name="postId" th:value="${post.postId}"/> 
-                                            <button type="submit" onclick="deniedForm(event)">Reject</button> 
+                                            <button type="submit" onclick="deniedForm(event)" style="background-color: red">Reject</button> 
                                         </form> 
                                     </div>
                                 </td> 
