--- a/src/main/resources/templates/blogdetail.html
+++ b/src/main/resources/templates/blogdetail.html
@@ -970,13 +970,13 @@
                             <div th:text="${#strings.abbreviate(getnotification.title,11)} ">
                             </div>
                             <a th:href="@{/details/{id}(id=${getnotification.postId})}">View details</a>
-                            <form th:if="${getnotification.status == -1}" action="updateBlog" method="post" style="display: inline;width:88px">
+                            <form th:if="${getnotification.status == -1}" th:action="@{/updateBlog}" method="post" style="display: inline;width:88px">
                                 <input type="hidden" name="postId" th:value="${getnotification.postId}">
                                 <button type="submit" class="buttonOwn button-updateBlog button-animation">Repost</button>
                             </form>
-                            <form th:if="${getnotification.status == -1}" action="deleteBlog" method="post" id="deleteForm" style="display: inline;width:88px">
+                            <form th:if="${getnotification.status == -1}" th:action="@{/deleteBlog}" method="post" id="deleteForm" style="display: inline;width:88px">
                                 <input type="hidden" name="postId" th:value="${getnotification.postId}">
-                                <button type="submit" class="buttonOwn button-deleteBlog button-animation" onclick="confirmDelete(event)">Delete</button>
+                                <button type="submit" class="buttonOwn button-deleteBlog button-animation">Delete</button>
                             </form>
                         </li>
                     </ul>
@@ -1087,7 +1087,7 @@
                     <div class="dropdown">
                         <button class="dropdown-btn" onclick="toggleDropdown()">Categories</button>
                         <div id="dropdownContent" class="dropdown-content">
-                            <ul th:each="category : ${category}"> 
+                            <ul th:each="category : ${category}" th:if="${category.status == 1}"> 
                                 <li onclick="changeBackgroundColor(this)"><a th:href="@{/detailcategory/{id}(id=${category.categoryId})}" th:text="${#strings.abbreviate(category.categoryName,28)}">Chicken</a></li>
                             </ul>
                         </div>
