--- a/src/main/resources/templates/landing_profile.html
+++ b/src/main/resources/templates/landing_profile.html
@@ -656,7 +656,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 <h1 class="wrong">Oops! Something went wrong.</h1>
                 <p>We're sorry, but an error has occurred.</p>
                 <p>Please try again later or contact support.</p>
-                <button class="button2"><a href="index.html" >Go Home</a></button>
+                <button class="button2"><a href="homelogin" >Go Home</a></button>
             </div>
         </div>
         <div th:if="${session.user != null}">
