--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -53,6 +53,6 @@
   <h1>Oops! Something went wrong.</h1>
   <p>We're sorry, but an error has occurred.</p>
   <p>Please try again later or contact support.</p>
-   <button class="button"><a href="index.html" >Go Home</a></button>
+   <button class="button"><a href="homelogin" >Go Home</a></button>
 </body>
 </html>
