--- a/src/main/resources/templates/loginfailed.html
+++ b/src/main/resources/templates/loginfailed.html
@@ -304,7 +304,8 @@
 
                 <label for="password">PASSWORD</label>
                 <input type="password" id="password" name="password" placeholder="Enter your password">
-                </br> <p style="color:red;">ERROR: username or password is wrong, please try again !</p>
+                </br> <p style="color:red;" th:if="${banned ==null}">ERROR: username or password is wrong, please try again !</p>
+                </br> <p style="color:red;" th:text="${banned}"></p>
 <!--                <div th:utext="${message}"></div>-->
                 <div class="form-group form-check">
                     <label class="form-check-label">
