--- a/src/main/resources/templates/profileaccount.html
+++ b/src/main/resources/templates/profileaccount.html
@@ -929,7 +929,7 @@
                         </form>
                         <form th:if="${getnotification.status == -1}" action="deleteBlog" method="post" id="deleteForm" style="display: inline;width:88px">
                             <input type="hidden" name="postId" th:value="${getnotification.postId}">
-                            <button type="submit" class="buttonOwn button-deleteBlog button-animation" onclick="confirmDelete(event)">Delete</button>
+                            <button type="submit" class="buttonOwn button-deleteBlog button-animation">Delete</button>
                         </form>
                     </li>
                 </ul>
@@ -1045,7 +1045,7 @@
                 <div class="dropdown">
                     <button class="dropdown-btn" onclick="toggleDropdown()">Categories</button>
                     <div id="dropdownContent" class="dropdown-content">
-                        <ul th:each="category : ${category}"> 
+                        <ul th:each="category : ${category}" th:if="${category.status == 1}"> 
                             <li onclick="changeBackgroundColor(this)"><a th:href="@{/detailcategory/{id}(id=${category.categoryId})}" th:text="${#strings.abbreviate(category.categoryName,28)}">Chicken</a></li>
                         </ul>
                     </div>
@@ -1072,7 +1072,7 @@
                         <h4>Categories:</h4>
                         <!--                th:field="*{category}"            -->
                         <select class="custom-combobox" id="category" name="category">
-                            <option th:each="category : ${category}" th:value="${category.categoryName}" th:text="${category.categoryName}"></option>
+                            <option th:each="category : ${category}" th:if="${category.status == 1}" th:value="${category.categoryName}" th:text="${category.categoryName}"></option>
                         </select>
                         <div class="post-footer">
                             <button type="submit" value="AddBlog" class="add">&#128395; Post</button>
@@ -1128,25 +1128,11 @@
                             <!-- Button for delete -->
                             <form th:if="${user.userName == post.author}" action="deleteBlog" method="post" id="deleteForm">
                                 <input type="hidden" name="postId" th:value="${post.postId}">
-                                <button type="submit" class="buttonOwn button-deleteBlog button-animation" onclick="confirmDelete(event)">Delete</button>
+                                <button type="submit" class="buttonOwn button-deleteBlog button-animation">Delete</button>
                             </form>
                         </div>
                     </div>    
                 </div>  
-                <script>
-                    function confirmDelete(event) {
-                        event.preventDefault(); // Prevent form submission
-
-                        // Display a confirmation dialog
-                        var confirmResult = confirm("Do you want to delete?");
-
-                        if (confirmResult) {
-                            document.getElementById("deleteForm").submit(); // Submit the form
-                        } else {
-                            // User clicked "Cancel" - do nothing
-                        }
-                    }
-                </script>
 
                 <!--                <div class="post">
                                     <div class="post-header">
